# snap-shift

./: README.md  pyproject.toml
docs/diagrams/: activity_diagram.puml
docs/diagrams/src/: README.md  component_diagram.puml  sequence_diagram.puml
src/amtt/: __main__.py
src/amtt/cli/: commands.py
src/amtt/core/: batch.py  config.py  device.py  filesystem.py  transfer.py  transfer_log.py
tests/: test_main.py
tests/cli/: test_cli.py
tests/core/: test_device.py  test_filesystem.py  test_transfer.py
