[project]
name = "amtt"
version = "0.1.0"
description = "Android Media Transfer Tool - Efficiently transfer media files from Android devices to Linux systems"
authors = [
    {name = "AMTT Team", email = "amtt@example.com"},
]
dependencies = [
    "pymtp>=0.0.6",
    "tqdm>=4.65.0",
    "click>=8.1.0",
    "pyusb>=1.2.0",
    "pydantic>=2.0.0",
    "pillow>=10.0.0",
    "colorama>=0.4.6",
    "pyyaml>=6.0.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.2.0",
    "black>=22.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/amtt --cov-report=term-missing"

[tool.ruff]
# Enable pycodestyle (E), pyflakes (F), isort (I), and other rules
select = ["E", "F", "I", "N", "W", "C90", "B", "UP"]
ignore = []

# Same as Black
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Skip magic trailing comma
skip-magic-trailing-comma = false
# Line endings
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["amtt"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true

[tool.coverage.run]
source = ["src/amtt"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
] 